[build-system]
requires = ["setuptools","wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "nesse"
version = "0.2.0"
authors = [
    {name = "RJ Taylor", email = "rjtaylo2@ncsu.edu"},
    {name = "Leendert Hayen", email = "hayen@lpccaen.in2p3.fr"}  
]
description = "A solid state detector simulation developed for the Nab experiment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy==1.24.3",
    "scipy",
    "tqdm",
    "Cython==3.1.2",
    "matplotlib",
    "numba",
    "h5py",
    "uproot==4.3.7",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/rjtayl/nesse"
"Bug Tracker" = "https://github.com/rjtayl/nesse/issues"

[tool.cibuildwheel]
skip = ["cp312-*", "cp313-*", "*-win32"]